@@ -1,6 +1,8 @@
 devel
 -----
 
+* Abort a FailedLeader job when its _to_ server fails.
+
 * add gzip and encryption options to arangoimport and arangoexport
 
 * removed content from Documentation/Books, but keeping the subfolders.
